# AbletonSmartAssistant

./: .gitignore  README.md  env.example  langgraph.json  pyproject.toml  requirements.txt  start-langgraph-studio.sh  swift-build-ASAapp.sh  swift-build-icloud.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
ASAApp/: Package.resolved  Package.swift
ASAApp/ASAApp.app/Contents/: Info.plist
ASAApp/ASAApp.app/Contents/Resources/: ASAApp.entitlements
ASAApp/ASAApp.app/Contents/_CodeSignature/: CodeResources
ASAApp/Sources/ASAApp/: ASAApp.swift  ConversationStore.swift
ASAApp/Sources/ASAApp/Audio/: AudioPipeline.swift  VADService.swift
ASAApp/Sources/ASAApp/Detection/: AbletonWindowDetector.swift
ASAApp/Sources/ASAApp/Functions/: AssistantFunctionRouter.swift
ASAApp/Sources/ASAApp/Models/: ConversationEntry.swift  LangGraphModels.swift
ASAApp/Sources/ASAApp/Overlay/: OverlayWindow.swift
ASAApp/Sources/ASAApp/RAG/: EmbeddingHelper.swift  RAGStore.swift
ASAApp/Sources/ASAApp/Realtime/: RealtimeEventParser.swift  RealtimeSession.swift  RealtimeWebSocketClient.swift
docs/: LANGGRAPH_LOGIC.md  LANGGRAPH_STUDIO_SETUP.md  LangGraphAgen-plan.md  PERMISSIONS_TROUBLESHOOTING.md  SMOKE_TESTS.md  TROUBLESHOOTING.md  swift_structure_en.md  swift_structure_ru.md
langgraph_server/: __init__.py  checkpoints.py  config.py  main.py  nodes.py  rag.py  run.sh  state.py  workflow.py
scripts/: RAGIngest.py  add_embeddings.py  process_manual.py
(+17 files in other folders)
